--- a/frontend/ASSETS/css/style.css
+++ b/frontend/ASSETS/css/style.css
@@ -1,18 +1,18 @@
 /* frontend/assets/css/style.css */
 :root {
-    --primary-color: #4CAF50;
-    --primary-light: #8BC34A;
-    --primary-dark: #388E3C;
+    --primary-color: #4c583e;
+    --primary-light: #768064;
+    --primary-dark: #2c3424;
     --secondary-color: #FFC107;
     --text-color: #333;
     --text-light: #666;
-    --bg-light: #f9f9f9;
-    --bg-dark: #1E1E1E;
-    --success-color: #28a745;
+    --bg-light: #b1b09c;
+    --bg-dark: #4c583e;
+    --success-color: #a76c28;
     --warning-color: #ffc107;
     --danger-color: #dc3545;
     --info-color: #17a2b8;
-    --border-color: #ddd;
+    --border-color: #4c583e;
     --shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     --border-radius: 4px;
     --transition: all 0.3s ease;
@@ -98,7 +98,7 @@
   
   .btn-outline:hover {
     background-color: var(--primary-color);
-    color: white;
+    color: rgba(255, 255, 255, 0.949);
   }
   
   .container {
