added files under pages, components and js

--- a/frontend/ASSETS/css/style.css
+++ b/frontend/ASSETS/css/style.css
@@ -5,7 +5,7 @@
     --primary-dark: #2c3424;
     --secondary-color: #FFC107;
     --text-color: #333;
-    --text-light: #666;
+    --text-light: #4c583e;
     --bg-light: #b1b09c;
     --bg-dark: #4c583e;
     --success-color: #a76c28;
