--- a/frontend/ASSETS/css/admin.css
+++ b/frontend/ASSETS/css/admin.css
@@ -7,22 +7,22 @@
 }
 
 :root {
-    --primary-color: #4472C4;
-    --secondary-color: #70AD47;
-    --accent-color: #ED7D31;
+    --primary-color: #2C3424;
+    --secondary-color: #2C3424;
+    --accent-color: #2C3424;
     --light-gray: #f5f5f5;
     --dark-gray: #333333;
     --text-color: #333333;
     --border-color: #e0e0e0;
-    --success-color: #5cb85c;
-    --warning-color: #f0ad4e;
-    --danger-color: #d9534f;
-    --info-color: #5bc0de;
+    --success-color:  #2C3424;
+    --warning-color: #2C3424;
+    --danger-color: #B4B170;
+    --info-color: #2C3424;
     --shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 body {
-    background-color: #f9f9f9;
+    background-color: #B1B09C;
     color: var(--text-color);
 }
 
